# cmake_project_example

./: .gitmodules  CMakeLists.txt
libexample/: CMakeLists.txt  exampleConfig.cmake.in
libexample/include/example/: example.h
libexample/src/: example.cpp
test-libexample/: CMakeLists.txt
test-libexample/src/: test-libexample.cpp
